--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,20 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  align-items: center;
+  gap: 16px
+}
+
+.links {
+  display: flex;
+  padding: 0;
+  gap: 8px;
+}
+
+.notifications {
+  margin-left: auto;
 }
 
 .profile-image {
@@ -20,6 +34,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+
+  margin-right: 8px;
 }
 
 .logo {
@@ -27,6 +43,9 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  
+  margin: 0;
+  padding-left: 8px;
 }
 
 button {
