--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,76 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+
+  display: flex;
+  flex-flow: column nowrap;
+  
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  font-size: 24px;
+}
+
+li {
+  margin: 20px 10px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  
+  font-size: 32px;
+  font-weight: 900;
+
+  display: flex;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.body {
+  flex: 1;
+  display: flex;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+
+  padding: 16px;
+}
+
+.cards {
+  flex: 1;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 20px;
+  padding: 32px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+
+  width: 400px;
+  padding: 20px 10px;
 }
